# earthmc

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: fetch_all_nations.rs  fetch_all_players.rs  fetch_all_quarters.rs  fetch_all_towns.rs  fetch_mystery_master.rs  fetch_player_stats.rs  fetch_server_info.rs  query_discord.rs  query_locations.rs  query_nations.rs  query_nearby.rs  query_players.rs  query_quarters.rs  query_towns.rs
src/: block_position.rs  chunk_position.rs  client.rs  discord_link.rs  errors.rs  lib.rs  location.rs  mystery_master.rs  named_id.rs  nation.rs  permission.rs  player.rs  player_stats.rs  quarter.rs  query.rs  retry_strategy.rs  server.rs  shared.rs  simple_position.rs  town.rs  world.rs  world_location.rs
tests/: test_discord.rs  test_location.rs  test_mystery_master.rs  test_named_id.rs  test_nation.rs  test_player.rs  test_player_stats.rs  test_quarter.rs  test_server.rs  test_shared.rs  test_town.rs
tests/inputs/: discord.json  location.json  mystery_master.json  named_id.json  nation.json  player.json  player_stats.json  quarter.json  server.json  town.json
tests/snapshots/: test_discord__location.snap  test_location__location.snap  test_mystery_master__mystery_master.snap  test_named_id__named_id.snap  test_nation__nation.snap  test_player__player.snap  test_player_stats__player_stats.snap  test_quarter__quarter.snap  test_server__server.snap  test_shared__named_id.snap  test_town__town.snap
