[package]
name = "earthmc"
version = "1.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kokiriglade/earthmc"
description = "Async client for interacting with the EarthMC API."

[dependencies]
derive_builder = "0.20"
parking_lot = "0.12"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.17", features = ["serde"] }

[dev-dependencies]
futures-util = "0.3"
insta = "1.43"
